@@ -5,6 +5,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix UDP trackers trying all endpoints behind the hostname
+
 0.16.4 release
 
 	* raise the default number of torrents allowed to announce to trackers to 1600
